force-app/main/default/objects/hed__Course_Offering__c/fields/Banner_CRN__c.field-meta.xml
<CustomField>
    <fullName>Banner_CRN__c</fullName>
    <description>CRN for the section in Banner</description>
    <inlineHelpText>CRN for the section in Banner - this is not an external ID since offerings can repeat term-over-term.</inlineHelpText>
    <label>Banner CRN</label>
    <length>5</length>
    <type>Text</type>
</CustomField>