force-app/main/default/objects/hed__Course_Offering__c/fields/Banner_Reference__c.field-meta.xml
<CustomField>
    <fullName>Banner_Reference__c</fullName>
    <description>TermCode+CRN</description>
    <externalId>true</externalId>
    <inlineHelpText>TermCode+CRN</inlineHelpText>
    <label>Banner Reference</label>
    <length>11</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>