force-app/main/default/objects/hed__Course_Offering__c/fields/Campus_Code__c.field-meta.xml
<CustomField>
    <fullName>Campus_Code__c</fullName>
    <label>Campus Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>