force-app/main/default/objects/hed__Course_Offering__c/fields/Drop_Date__c.field-meta.xml
<CustomField>
    <fullName>Drop_Date__c</fullName>
    <description>Date before which an offering can be safely dropped.</description>
    <formula>Part_of_Term__r.Drop_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Date before which an offering can be safely dropped.</inlineHelpText>
    <label>Drop Date</label>
    <type>Date</type>
</CustomField>