force-app/main/default/objects/hed__Course_Offering__c/fields/Is_Contract__c.field-meta.xml
<CustomField>
    <fullName>Is_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if this section is offering a contract course.</description>
    <inlineHelpText>True if this section is offering a contract course.</inlineHelpText>
    <label>Is Contract</label>
    <type>Checkbox</type>
</CustomField>