force-app/main/default/objects/hed__Course_Offering__c/fields/Is_Online__c.field-meta.xml
<CustomField>
    <fullName>Is_Online__c</fullName>
    <description>True if Section is online (&apos;MC&apos;)</description>
    <formula>Campus_Code__c=&apos;MC&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if Section is online (&apos;MC&apos;)</inlineHelpText>
    <label>Is Online</label>
    <type>Checkbox</type>
</CustomField>