force-app/main/default/objects/hed__Course_Offering__c/fields/Part_of_Term__c.field-meta.xml
<CustomField>
    <fullName>Part_of_Term__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Part of term for the section; helps determine scheduling.</description>
    <inlineHelpText>Part of Term should be ignored for most users; it helps fill the Drop &amp; Withdrawal dates.</inlineHelpText>
    <label>Part of Term</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Offering must be in the same term as the Part of Term.</errorMessage>
        <filterItems>
            <field>Part_of_Term__c.Term__c</field>
            <operation>equals</operation>
            <value>Course Offering: Term</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Part_of_Term__c</referenceTo>
    <relationshipLabel>Course Offerings</relationshipLabel>
    <relationshipName>Course_Offerings</relationshipName>
    <type>Lookup</type>
</CustomField>