force-app/main/default/objects/hed__Course_Offering__c/fields/Subledger__c.field-meta.xml
<CustomField>
    <fullName>Subledger__c</fullName>
    <description>Account # for payment routing.</description>
    <inlineHelpText>Account # for payment routing.</inlineHelpText>
    <label>Subledger</label>
    <length>11</length>
    <type>Text</type>
</CustomField>