force-app/main/default/objects/hed__Course_Offering__c/fields/Withdraw_0_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_0_Date__c</fullName>
    <description>Withdrawn grade and 0% tuition refunded</description>
    <formula>Part_of_Term__r.Withdraw_0_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Withdrawn grade and 0% tuition refunded</inlineHelpText>
    <label>Withdraw 0 Date</label>
    <type>Date</type>
</CustomField>