force-app/main/default/objects/hed__Course_Offering__c/fields/Withdraw_50_Date__c.field-meta.xml
<CustomField>
    <fullName>Withdraw_50_Date__c</fullName>
    <description>Withdrawn Grade and 50% tuition refunded</description>
    <formula>Part_of_Term__r.Withdraw_50_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Withdrawn Grade and 50% tuition refunded</inlineHelpText>
    <label>Withdraw 50 Date</label>
    <type>Date</type>
</CustomField>